<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/StoryViewRelativeLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="55dp" >

        <RelativeLayout
            android:id="@+id/StoryViewRelativeLayoutInner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <!-- loginId -->

            <TextView
                android:id="@+id/story_view_label_login_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_gravity="left"
                android:text="@string/story_view_label_login_id"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/story_view_value_login_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/story_view_label_login_id"
                android:text="@string/story_view_edittext_login_id_default_value"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <!-- storyId -->

            <TextView
                android:id="@+id/story_view_label_story_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/story_view_value_story_id"
                android:layout_alignBottom="@+id/story_view_value_story_id"
                android:layout_alignParentLeft="true"
                android:layout_gravity="left"
                android:text="@string/story_view_label_story_id"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold"
                android:visibility="gone" />

            <TextView
                android:id="@+id/story_view_value_story_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/story_view_value_login_id"
                android:text="@string/story_view_edittext_story_id_default_value"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:visibility="gone" />
            <!-- title -->

            <TextView
                android:id="@+id/story_view_label_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/story_view_value_login_id"
                android:layout_gravity="left"
                android:text="@string/story_view_label_title"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/story_view_value_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/story_view_label_title"
                android:text="@string/story_view_edittext_title_default_value"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <!-- body -->

            <TextView
                android:id="@+id/story_view_label_body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/story_view_value_title"
                android:layout_gravity="left"
                android:text="@string/story_view_label_body"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/story_view_value_body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/story_view_label_body"
                android:text="@string/story_view_edittext_body_default_value"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <!-- audioLink -->

            <TextView
                android:id="@+id/story_view_label_audio_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/story_view_value_body"
                android:layout_gravity="left"
                android:text="@string/story_view_label_audio_link"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold"
                android:visibility="gone" />

            <TextView
                android:id="@+id/story_view_value_audio_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/story_view_label_audio_link"
                android:text="@string/story_view_edittext_audio_link_default_value"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:visibility="gone" />

            <!-- videoLink -->

            <TextView
                android:id="@+id/story_view_label_video_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/story_view_value_audio_link"
                android:layout_gravity="left"
                android:text="@string/story_view_label_video_link"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold"
                android:visibility="gone" />

            <TextView
                android:id="@+id/story_view_value_video_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/story_view_label_video_link"
                android:text="@string/story_view_edittext_video_link_default_value"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:visibility="gone" />

            <!-- imageName -->

            <TextView
                android:id="@+id/story_view_label_image_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/story_view_value_video_link"
                android:layout_gravity="left"
                android:text="@string/story_view_label_image_name"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold"
                android:visibility="gone" />

            <TextView
                android:id="@+id/story_view_value_image_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/story_view_label_image_name"
                android:text="@string/story_view_edittext_image_name_default_value"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:visibility="gone" />

            <!-- imageMetaData -->

            <TextView
                android:id="@+id/story_view_label_image_meta_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/story_view_value_image_meta_data"
                android:layout_alignBottom="@+id/story_view_value_image_meta_data"
                android:layout_alignParentLeft="true"
                android:layout_gravity="left"
                android:text="@string/story_view_label_image_meta_data"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/story_view_value_image_meta_data"
                android:layout_width="wrap_content"
                android:layout_height="160dp"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/story_view_value_image_name"
                android:contentDescription="Content desc."
                android:src="@drawable/ic_launcher"
                android:text="@string/story_view_edittext_image_meta_data_default_value"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:visibility="gone" />

            <!-- tags -->

            <TextView
                android:id="@+id/story_view_label_tags"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/story_view_value_image_meta_data"
                android:layout_gravity="left"
                android:text="@string/story_view_label_tags"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/story_view_value_tags"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/story_view_label_tags"
                android:text="@string/story_view_edittext_tags_default_value"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <!-- creationTime -->

            <TextView
                android:id="@+id/story_view_label_story_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/story_view_value_tags"
                android:layout_gravity="left"
                android:text="@string/story_view_label_story_time"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/story_view_value_story_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/story_view_label_story_time"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/story_view_value_story_time"
                android:text="story time"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <!-- latitude -->

            <TextView
                android:id="@+id/story_view_label_creation_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/story_view_value_creation_time"
                android:layout_alignBottom="@+id/story_view_value_creation_time"
                android:layout_alignParentLeft="true"
                android:layout_gravity="left"
                android:text="@string/story_view_label_creation_time"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/story_view_value_creation_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/story_view_value_story_time"
                android:text="@string/story_view_edittext_creation_time_default_value"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <!-- storyTime -->

            <TextView
                android:id="@+id/story_view_label_latitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/story_view_value_latitude"
                android:layout_alignBottom="@+id/story_view_value_latitude"
                android:layout_alignParentLeft="true"
                android:layout_gravity="left"
                android:text="@string/story_view_label_latitude"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/story_view_value_latitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/story_view_value_creation_time"
                android:text="@string/story_view_edittext_latitude_default_value"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <!-- longitude -->

            <TextView
                android:id="@+id/story_view_label_longitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/story_view_value_longitude"
                android:layout_alignBottom="@+id/story_view_value_longitude"
                android:layout_alignParentLeft="true"
                android:layout_gravity="left"
                android:text="@string/story_view_label_longitude"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/story_view_value_longitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/story_view_value_latitude"
                android:text="@string/story_view_edittext_longitude_default_value"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </RelativeLayout>
    </ScrollView>

    <Button
        android:id="@+id/button_story_view_to_edit"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="26dp"
        android:onClick="clickListener"
        android:padding="3dp"
        android:text="@string/story_view_button_label_edit"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/button_story_view_to_delete"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button_story_view_to_edit"
        android:layout_alignBottom="@+id/button_story_view_to_edit"
        android:layout_alignParentRight="true"
        android:onClick="clickListener"
        android:padding="3dp"
        android:text="@string/story_view_button_label_delete"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>